# pcmsolver

./: .appveyor.yml  .gitattributes  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  default.nix  setup.py
.githooks/: license_maintainer.py  pre-commit
api/: pcmsolver.F90  pcmsolver.f90  pcmsolver.h
cmake/custom/: GNUdirs.cmake  autogenerated.cmake  eigen.cmake  static_library.cmake  test.cmake  version.cmake
doc/: pcmsolver.bib
doc/code-reference/: classes-and-functions.rst  solvers.rst  td-solvers.rst
doc/snippets/: example_input-all.inp
doc/users/: input.rst
include/: Citation.hpp  ErrorHandling.hpp  PhysicalConstants.hpp
src/: CMakeLists.txt  make_cmake_files.py
src/bi_operators/: BoundaryIntegralOperator.cpp  BoundaryIntegralOperator.hpp  BoundaryIntegralOperators.cpp  BoundaryIntegralOperators.hpp  CMakeLists.txt  CollocationIntegrator.cpp  CollocationIntegrator.hpp  IntegratorForward.hpp  IntegratorHelperFunctions.hpp  IntegratorTypes.hpp  NumericalIntegrator.cpp  NumericalIntegrator.hpp  PurisimaIntegrator.cpp  PurisimaIntegrator.hpp
src/cavity/: CMakeLists.txt  Cavity.cpp  Cavity.hpp  CavityData.hpp  Element.cpp  Element.hpp  GePolCavity.cpp  GePolCavity.hpp  RegisterCavityToFactory.hpp  RestartCavity.cpp  RestartCavity.hpp  WaveletCavity.cpp  WaveletCavity.hpp
src/ddpcm/: CMakeLists.txt  ddcosmo.f90  sphere_lebedev_rule.f90
src/green/: AnisotropicLiquid.cpp  AnisotropicLiquid.hpp  CMakeLists.txt  DerivativeTypes.hpp  DerivativeUtils.hpp  GreenData.hpp  GreenUtils.hpp  GreensFunction.hpp  IGreensFunction.hpp  InterfacesImpl.hpp  IonicLiquid.cpp  IonicLiquid.hpp  MetalNP.hpp  PlanarDiffuse.hpp  (+8 more)
src/td_solver/: CMakeLists.txt  Debye.hpp  ITDSolver.cpp  ITDSolver.hpp  RegisterTDSolverToFactory.hpp  TDCPCMIterativeSolver.hpp  TDCPCMSolver.cpp  TDCPCMSolver.hpp  TDIEFSolver.cpp  TDIEFSolver.hpp  TDOnsagerIEFSolver.hpp  TDPCMIterativeSolver.hpp  TDPCMSolver.cpp  TDPCMSolver.hpp  TDSingleIEFSolver.cpp  TDSingleIEFSolver.hpp  TDSolver.hpp  TDSolverData.hpp  TDSolverHelperFunctions.hpp
src/variational_solver/: CMakeLists.txt  RegisterVSolverToFactory.hpp  VCPCMSolver.cpp  VCPCMSolver.hpp  VIEFSolver.cpp  VIEFSolver.hpp  VPCMSolver.cpp  VPCMSolver.hpp  VSolverImpl.hpp
tests/: CMakeLists.txt  unit_tests.cpp
tests/C_host/: C1-VPCM-C_host.c  CMakeLists.txt  C_host-functions.h  C_host.c  D2h-VPCM-C_host.c  TD-C_host.c  VPCM-C_host.c  fail-C_host.c  tdsolver.pcm  vcpcm.inp
tests/bi_operators/: bi_operators_collocation.cpp  bi_operators_collocation.cpp.in  bi_operators_numerical.cpp  bi_operators_numerical.cpp.in  bi_operators_purisima.cpp  bi_operators_purisima.cpp.in  update_reference_files.cpp
tests/cpcm/: CMakeLists.txt  cpcm_gepol-C2H4.cpp  cpcm_gepol-C2H4_D2h.cpp  cpcm_gepol-NH3.cpp  cpcm_gepol-NH3_from-file.cpp  cpcm_gepol-point.cpp  cpcm_gepol-point_from-file.cpp  cpcm_symmetry.cpp
tests/ddPCM/: CMakeLists.txt  ddPCM.cpp
tests/gepol/: gepol_C2H4_D2h.cpp  gepol_NH3.cpp  gepol_point.cpp
tests/green/: CMakeLists.txt  green_metalnp.cpp  green_planar_diffuse.cpp  green_spherical_sharp.cpp
tests/iefpcm/: CMakeLists.txt  iefpcm_anisotropic-gepol-point.cpp  iefpcm_anisotropic-symmetry.cpp  iefpcm_diffuse-gepol-point.cpp  iefpcm_gepol-C2H4_D2h.cpp  iefpcm_gepol-NH3.cpp  iefpcm_gepol-NH3_from-file.cpp  iefpcm_gepol-outcharge.cpp  iefpcm_gepol-point.cpp  iefpcm_gepol-point_flipped.cpp  iefpcm_gepol-point_from-file.cpp  iefpcm_symmetry.cpp
tests/input/: @diffuse.inp  @explicit_td.inp  @point_charges.inp  @restart.inp  @tdsolver.inp  @tsless.inp  @variational.inp  @wavelet.inp  CMakeLists.txt  explicit_td.inp  input.cpp.in  input_cpcm.cpp  input_diffuse.cpp  input_multipoles.cpp  input_restart.cpp  input_tdsolver.cpp  input_tsless.cpp  input_wavelet.cpp  tdsolver.inp  variational.inp
tests/numerical_quadrature/: numerical_quadrature.cpp
tests/pwc/: CMakeLists.txt  pwc_C6H6.cpp  pwc_NH3.cpp  pwc_secondKind_C6H6.cpp
tests/pwl/: CMakeLists.txt  pwl_C6H6.cpp  pwl_NH3.cpp  pwl_secondKind_C6H6.cpp
tests/standalone/: CMakeLists.txt  onsager_tdsolver.pcm  standalone_tdsolver.pcm
tests/td_solver/: .gitignore  CMakeLists.txt  OnsagerReactionField.hpp  plot_tdsolver.cpp  tdcpcm-iter_gepol-point.cpp  tdcpcm-iter_gepol-point.cpp.in  tdcpcm_collocation.npy  tdcpcm_gepol-point.cpp  tdcpcm_gepol-point.cpp.in  tdcpcmiterative_collocation.npy  tdief_gepol-point.cpp  tdief_gepol-point.cpp.in  tdief_lowdin_collocation.npy  tdief_lowdin_collocation_K_0.npy  tdief_lowdin_collocation_K_d.npy  tdief_lowdin_collocation_Lambda.npy  tdief_lowdin_collocation_tau.npy  tdonsagerief_collocation.npy  tdonsagerief_gepol-point.cpp  tdonsagerief_gepol-point.cpp.in  tdsingleief_collocation.npy  tdsingleief_gepol-point.cpp  tdsingleief_gepol-point.cpp.in  update_tdsolver_reference_files.cpp
tests/utils/: CMakeLists.txt  utils_dipolar-potential.cpp  utils_newton-potential.cpp
tests/variational_solver/: CMakeLists.txt  viefpcm_anisotropic-gepol-point.cpp  viefpcm_anisotropic-symmetry.cpp  viefpcm_gepol-C2H4_D2h.cpp  viefpcm_gepol-NH3.cpp  viefpcm_gepol-NH3_from-file.cpp  viefpcm_gepol-point.cpp  viefpcm_gepol-point_from-file.cpp  viefpcm_symmetry.cpp
tests/vcpcm/: .gitignore  CMakeLists.txt  vcpcm-error_gepol-C2H4_D2h.cpp  vcpcm-guess_gepol-C2H4_D2h.cpp  vcpcm-update_gepol-C2H4_D2h.cpp  vcpcm-update_gepol-C2H4_D2h.cpp.in  vcpcm-update_linesearch.npy  vcpcm_gepol-C2H4_D2h.cpp  vcpcm_gepol-NH3.cpp  vcpcm_gepol-NH3_from-file.cpp  vcpcm_gepol-point.cpp  vcpcm_gepol-point_from-file.cpp  vcpcm_symmetry.cpp
tests/viefpcm/: .gitignore  CMakeLists.txt  viefpcm-error_gepol-C2H4_D2h.cpp  viefpcm-guess_gepol-C2H4_D2h.cpp  viefpcm-update_gepol-C2H4_D2h.cpp  viefpcm-update_gepol-C2H4_D2h.cpp.in  viefpcm-update_linesearch.npy  viefpcm_anisotropic-symmetry.cpp  viefpcm_diffuse-gepol-point.cpp  viefpcm_gepol-C2H4_D2h.cpp  viefpcm_gepol-NH3.cpp  viefpcm_gepol-NH3_from-file.cpp  viefpcm_gepol-point.cpp  viefpcm_gepol-point_from-file.cpp  viefpcm_symmetry.cpp
tests/wavelet_cavity/: CMakeLists.txt  wavelet_cavity_C6H6.cpp  wavelet_cavity_NH3.cpp
tools/: pcmparser.py  pcmsolver.py.in
(+101 files in other folders)
