# Math utilities and helper classes
add_subdirectory(surface_function)
add_subdirectory(input)
# Cavity generators
add_subdirectory(gepol)
add_subdirectory(wavelet_cavity)
# Green's functions
add_subdirectory(green)
# Solvers
add_subdirectory(cpcm)
add_subdirectory(iefpcm)
add_subdirectory(pwc)
add_subdirectory(pwl)

